fixes footer text-jumping bug

--- a/app/stylesheets/_core.sass
+++ b/app/stylesheets/_core.sass
@@ -121,8 +121,10 @@ footer
   a
     color: $topLinkColor
   span#footer_copy
-  nav
+    float: left
+  span#nav
+    display: inline
     color: black
-    +inline-block
-    position: absolute
-    right: 10px
+    float: right
+
+      
